[gd_scene load_steps=4 format=3 uid="uid://blk8mn3cpwm75"]

[ext_resource type="Script" uid="uid://f5i441cutp1c" path="res://Scenes/Enemy/enemy_milk_jug.gd" id="1_dgsy0"]
[ext_resource type="Texture2D" uid="uid://b06bgx54jrwim" path="res://Assets/milk_jug.png" id="1_v5g71"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dgsy0"]
radius = 38.0

[node name="enemy_milk_jug" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_dgsy0")
numBullets = 8
enemy_type = 1
xpOnDeath = 10
speed = 15.0
health = 8.0
jitter_strength = 0.6

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v5g71")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CircleShape2D_dgsy0")

[node name="downTimer" type="Timer" parent="."]

[node name="shootTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
